# stego-kit

./: .gitignore  CLI_PLAN.md  LICENSE  README.md  main.py  pyproject.toml
algo/: __init__.py  common.py
algo/ac/: __init__.py  ac.py
algo/artifacts/: __init__.py  binary_based.py  common.py  differential_based.py  stability_based.py
algo/asymmetric/: asymmetric.py
algo/discop/: __init__.py  common.py  discop.py  discop_base.py
algo/meteor/: meteor.py
core/: __init__.py  algorithm_enum.py  stego_algorithm.py  stego_context.py  stego_dispatcher.py  stego_registry.py
stegokit/: __init__.py
stegokit/algo/: __init__.py  common.py
stegokit/algo/ac/: ac.py
stegokit/algo/adg/: __init__.py  adg.py
stegokit/algo/ars/: __init__.py  ars.py
stegokit/algo/artifacts/: binary_based.py  common.py  differential_based.py  stability_based.py
stegokit/algo/asymmetric/: __init__.py  asymmetric.py
stegokit/algo/discop/: common.py  discop.py  discop_base.py
stegokit/algo/fdpss/: binary_based.py  common.py  differential_based.py  stability_based.py
stegokit/algo/huffman/: __init__.py  huffman.py
stegokit/algo/meteor/: __init__.py  meteor.py
stegokit/cli/: builders.py  commands.py  io.py  main.py
stegokit/core/: __init__.py  algorithm_config.py  algorithm_enum.py  algorithm_spec.py  generation_config.py  runtime_context.py  security_material.py  stego_algorithm.py  stego_context.py  stego_dispatcher.py  stego_paradigm.py  stego_registry.py
stegokit/utils/: __init__.py  entropy.py
test/: test_huffman_real_model.py  test_huffman_roundtrip.py
utils/: __init__.py  prg.py
