[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegokit"
version = "0.1.4"
description = "A modular toolkit for generative steganography algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "StegoKit contributors" }
]
keywords = ["steganography", "nlp", "llm", "security"]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.40",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Dwinovo/stego-kit"
Repository = "https://github.com/Dwinovo/stego-kit"
Issues = "https://github.com/Dwinovo/stego-kit/issues"

[project.scripts]
stegokit = "stegokit.cli.main:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=6.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
stegokit = ["py.typed"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stegokit*"]
